src/test/deca/codegen/invalid/MethodSansReturn.deca
// Description:
//    method sans return
//
// Resultats:
//    Erreur : Methode terminee sans passer par return
// 
// Historique:
//    cree le 01/01/2023

class A {
	int a;
	int geta(){
	}
}
	
{

	A a = new A();
	int b = a.geta();
}
